--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <version>4.11</version> <!-- Or whatever JUnit you're using. -->
 	</dependency>
 </dependencies>
+	
+<distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/zahrandirusrizal/Tugas-MKEPL-10</url>
+    </repository>
+  </distributionManagement>
   
   <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
